tests/ui/edge_cases/else_if_missing_if.stderr
error: unmatched closing tag `/if`
  --> tests/ui/edge_cases/else_if_missing_if.rs:12:9
   |
12 |         [</if>]
   |         ^^^^^^^
